--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,1 +1,14 @@
-<p>header works!</p>
+<header>
+  <a href="/">
+    <img id="logo" src="/assets/img/logo.png" alt="logo">
+  </a>
+  <label>
+    <input type="text" id="search_input" placeholder="What are you want to find out?">
+  </label>
+  <input type="submit" class="search" value="search">
+  <input type="button" class="settings">
+  <div class="user">
+    <div class="user-name">Your name</div>
+    <fa-icon [icon]="faUserCircle"></fa-icon>
+  </div>
+</header>
