--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -6,7 +6,9 @@
     <input type="text" id="search_input" placeholder="What are you want to find out?">
   </label>
   <input type="submit" class="search" value="search">
-  <input type="button" class="settings">
+  <button class="settings">
+    <fa-icon [icon]="faSlidersH"></fa-icon>
+  </button>
   <div class="user">
     <div class="user-name">Your name</div>
     <fa-icon [icon]="faUserCircle"></fa-icon>
