feat: add filters

--- a/src/app/components/filter/filter.component.html
+++ b/src/app/components/filter/filter.component.html
@@ -1,1 +1,11 @@
-<p>filter works!</p>
+<div class="filter" style="display: none">
+  <div>Sorting by:</div>
+  <a href="/">date</a>
+  <a href="/">count of views</a>
+  <div>
+    <a href="/">by word or sentence</a>
+    <label>
+      <input id="by_word_or_sentence" type="text">
+    </label>
+  </div>
+</div>
