--- a/src/app/components/search-results/search-results.component.html
+++ b/src/app/components/search-results/search-results.component.html
@@ -1,4 +1,3 @@
-<p>search-results works!</p>
-<div *ngFor="let searchItem of searchResponse.items">
-  <app-search-item> </app-search-item>
+<div *ngFor="let searchItem of searchResponse.items" class="result">
+  <app-search-item [item]="searchItem"></app-search-item>
 </div>
