--- a/src/app/components/filter/filter.component.html
+++ b/src/app/components/filter/filter.component.html
@@ -1,4 +1,4 @@
-<div class="filter" style="display: none">
+<div class="filter" [style]="hidden? 'display: none;' : ''">
   <div>Sorting by:</div>
   <a href="/">date</a>
   <a href="/">count of views</a>
