--- a/src/app/components/search-item/search-item.component.html
+++ b/src/app/components/search-item/search-item.component.html
@@ -20,4 +20,5 @@
   </div>
   <div class="title"> {{item.snippet.title}}</div>
   <div class="more_button"><a>more...</a></div>
+  <div class="public_date" [ngClass]="borderClass"></div>
 </div>
