fix: fix filter display

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -8,7 +8,7 @@
     </label>
     <input type="submit" class="search" value="search" >
   </form>
-  <button class="settings">
+  <button type="button" class="settings" (click)="showFilter()">
     <fa-icon [icon]="faSlidersH"></fa-icon>
   </button>
   <div class="user">
