--- a/src/app/components/filter/filter.component.css
+++ b/src/app/components/filter/filter.component.css
@@ -1,15 +1,21 @@
-.filter {
+.filters {
   text-align: center;
   background-color: #f1f1f1;
   display: flex;
   flex-direction: row;
   justify-content: center;
 }
-.filter > * {
+.filters > * {
   display: inherit;
   margin: 5px;
 }
 #by_word_or_sentence {
   border: hidden;
   margin-left: 5px;
+}
+
+.filter {
+  color: -webkit-link;
+  cursor: pointer;
+  text-decoration: underline;
 }
