feat: add base modules-services-routing

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,6 +1,6 @@
 <header>
   <a href="/">
-    <img id="logo" src="/assets/img/logo.png" alt="logo">
+    <img id="logo" src="/src/assets/img/logo.png" alt="logo">
   </a>
   <form [formGroup]="searchForm" (ngSubmit)="onSubmit()">
     <label>
