--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <app-header></app-header>
-<app-filter></app-filter>
-<app-search-results></app-search-results>
+<main>
+  <router-outlet></router-outlet>
+</main>
