--- a/src/app/youtube/components/search-item-card/search-item-card.component.html
+++ b/src/app/youtube/components/search-item-card/search-item-card.component.html
@@ -1,1 +1,30 @@
-<p>search-item-card works!</p>
+<div class="item">
+  <img [src]="item.snippet.thumbnails.maxres.url" alt="{{item.snippet.title}}">
+  <div class="info">
+    <div class="info_header">
+      <mat-card-title class="title"> {{item.snippet.title}}</mat-card-title>
+      <div>{{item.snippet.publishedAt}}</div>
+    </div>
+    <h2>Description</h2>
+    <mat-card-content>{{item.snippet.description}}</mat-card-content>
+    <div class="statistics">
+      <div class="statistics_item">
+        <fa-icon [icon]="faEye"></fa-icon>
+        <div> {{item.statistics.viewCount}}</div>
+      </div>
+      <div class="statistics_item">
+        <fa-icon [icon]="faHeart"></fa-icon>
+        <div> {{item.statistics.likeCount}}</div>
+      </div>
+      <div class="statistics_item">
+        <fa-icon [icon]="faHeartBroken"></fa-icon>
+        <div> {{item.statistics.dislikeCount}}</div>
+      </div>
+      <div class="statistics_item">
+        <fa-icon [icon]="faComments"></fa-icon>
+        <div> {{item.statistics.commentCount}}</div>
+      </div>
+    </div>
+    <div class="public_date" [ngClass]="borderClass"></div>
+  </div>
+</div>
