--- a/src/app/youtube/components/search-item-card/search-item-card.component.css
+++ b/src/app/youtube/components/search-item-card/search-item-card.component.css
@@ -2,14 +2,18 @@
   text-align: center;
   border-radius: 5px;
   padding: 0;
-  margin: 15px 0;
+  margin: 20px auto auto;
   display: flex;
   flex-direction: row;
   background-color: #f1f1f1;
+  min-width: 50%;
+  max-width: 80%;
 }
 
 .item > img {
   max-width: 45%;
+  border-bottom-left-radius: 5px;
+  border-top-left-radius: 5px;
 }
 
 .public_date {
