--- a/src/app/auth/pages/login/login/login.component.css
+++ b/src/app/auth/pages/login/login/login.component.css
@@ -12,7 +12,8 @@
 }
 
 mat-card, mat-spinner {
-  width: 20%;
+  width: 30%;
+  min-width: 400px;
   margin: 30px auto 10%;
   border-radius: 8px;
 }
