--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -15,7 +15,7 @@
   </div>
   <div id="end">
     <div class="user" [style]="authUserService.isAuthorized?'':'display: none;'">
-      <mat-label class="user-name">{{userName}}</mat-label>
+      <mat-label class="user-name" (click)="navigateToAdmin()">{{userName}}</mat-label>
       <mat-icon matSuffix>perm_identity</mat-icon>
       <div class="logout">
         <a href="/logout">Logout</a>
